Fixes #18672: when there's a disabled directive in a rule, it's really hard to see

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -1428,6 +1428,24 @@ label.text-fit{
   opacity: .5;
 }
 
+.badge-disabled {
+  background-color: #04192257;
+  font-size: 0.8em;
+  color: #fff;
+  font-weight: bold;
+  padding: 2px 8px;
+  margin-left: 2px;
+  border-radius: 4px;
+}
+.badge-disabled:before {
+  content: "DISABLED";
+}
+.tooltip .badge-disabled {
+  float: right;
+  position: relative;
+  top: -3px;
+  font-size: 0.9em;
+}
 /* --- LABEL --- */
 #badge-apm{
   margin-left: 5px;
